<resources>
    <string name="app_name">SyferSkool</string>
    <string name="text_home">Home</string>

    <string name="text_tutorials">Tutorials</string>

    <string name="text_custom">Custom</string>
    <string name="text_custom_intro">Test yourself with your own custom cipher!</string>
    <string name="text_custom_cipher_type_default">Please choose a type of cipher</string>
    <string-array name="text_array_cipher_types">
        <item>Shift</item>
        <item>Polyalphabetical</item>
    </string-array>
    <string name="text_spinner_label_cipher_type">Class</string>
    <string name="text_label_shift_count">Shift Count</string>
    <string name="text_label_key">Key</string>
    <string name="text_label_input">Input</string>
    <string name="text_label_output">Output</string>
    <string name="text_btn_encrypt">Encrypt</string>
    <string name="text_btn_decrypt">Decrypt</string>

    <string name="text_caesar">Caesar Cipher</string>
    <string name="text_caesar_explanation">
        The Caesar cipher is credited as the first shift cipher. It is named after Roman emperor
        Julius Caesar, who used the cipher for his private messages. The Caesar cipher works by
        shifting a given character three spaces to the right. For example, the letter B would become
        the letter E.
    </string>
    <string name="text_test">Test</string>
    <string name="text_caesar_test">Encrypt the plain text, emperor, using the Caesar Cipher</string>
    <string name="text_cipher_text">Cipher Text</string>

    <string name="text_ROT13">ROT13</string>
    <string name="text_ROT13_explanation">
        This is the same as the Caesar cipher but here the encryption and the decryption uses the
        same architecture. This is due to the shift being half the length of the alphabet, 13.
    </string>
    <string name="text_ROT13_test">Encrypt the plain text, thirteen, using the ROT13 Cipher</string>

    <string name="text_vigenère">Vigenère</string>
    <string name="text_vigenère_explanation">
        This is a polyalphabetic cipher, it is made up of many interwoven Caesar ciphers based on
        some key word. For example if we have the plain text and key, bob and ana respectively.
        We would shift b by 0 as a is the first letter in the alphabet, then o by 13 and b by 0.
        This gives us bab as the cipher text.
    </string>
    <string name="text_vigenère_test">
        Encrypt the plain text, blaise, using the vigenère Cipher and the key: key
    </string>
</resources>
